center align fix for login and signup

--- a/client/src/components/user/Form.css
+++ b/client/src/components/user/Form.css
@@ -1,22 +1,18 @@
-
-.form {
-    border: 1px solid rgb(248, 243, 243);
-    margin-top: 100px;
-    margin-bottom: 100px;
-    margin-right: 150px;
-    margin-left: 400px;
-    background-color:rgb(245, 245, 245);
-    width: 500px;
-    height: 300px;
-    padding-left: 30px;
-    font-size: 15px;
-    color:rgb(30, 144, 255);
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 h3{
     font-size: 25px;
     font-weight: bold;
 }
-
+.form {
+    background: #f2f2f7;
+    width: 400px;
+}
 .btn {
     color: #ffffff;
     background-color:rgb(45, 152, 255);
